build/log/idf_py_stdout_output_138922
[1/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/servo.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/servo.c.obj 
/home/lord-daniel/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.6-354-gfb2a72fd53\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/lord-daniel/Code/ESP_IDF/ashumitra_own/build/config -I/home/lord-daniel/Code/ESP_IDF/ashumitra_own/main/include -I/home/lord-daniel/esp/esp-idf/components/newlib/platform_include -I/home/lord-daniel/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/lord-daniel/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/lord-daniel/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/lord-daniel/esp/esp-idf/components/freertos/esp_additions/include -I/home/lord-daniel/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/lord-daniel/esp/esp-idf/components/esp_hw_support/include -I/home/lord-daniel/esp/esp-idf/components/esp_hw_support/include/soc -I/home/lord-daniel/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/lord-daniel/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/lord-daniel/esp/esp-idf/components/heap/include -I/home/lord-daniel/esp/esp-idf/components/log/include -I/home/lord-daniel/esp/esp-idf/components/soc/include -I/home/lord-daniel/esp/esp-idf/components/soc/esp32 -I/home/lord-daniel/esp/esp-idf/components/soc/esp32/include -I/home/lord-daniel/esp/esp-idf/components/hal/esp32/include -I/home/lord-daniel/esp/esp-idf/components/hal/include -I/home/lord-daniel/esp/esp-idf/components/hal/platform_port/include -I/home/lord-daniel/esp/esp-idf/components/esp_rom/include -I/home/lord-daniel/esp/esp-idf/components/esp_rom/include/esp32 -I/home/lord-daniel/esp/esp-idf/components/esp_rom/esp32 -I/home/lord-daniel/esp/esp-idf/components/esp_common/include -I/home/lord-daniel/esp/esp-idf/components/esp_system/include -I/home/lord-daniel/esp/esp-idf/components/esp_system/port/soc -I/home/lord-daniel/esp/esp-idf/components/esp_system/port/include/private -I/home/lord-daniel/esp/esp-idf/components/xtensa/include -I/home/lord-daniel/esp/esp-idf/components/xtensa/esp32/include -I/home/lord-daniel/esp/esp-idf/components/lwip/include -I/home/lord-daniel/esp/esp-idf/components/lwip/include/apps -I/home/lord-daniel/esp/esp-idf/components/lwip/include/apps/sntp -I/home/lord-daniel/esp/esp-idf/components/lwip/lwip/src/include -I/home/lord-daniel/esp/esp-idf/components/lwip/port/include -I/home/lord-daniel/esp/esp-idf/components/lwip/port/freertos/include -I/home/lord-daniel/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/lord-daniel/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/lord-daniel/esp/esp-idf/components/driver/include -I/home/lord-daniel/esp/esp-idf/components/driver/deprecated -I/home/lord-daniel/esp/esp-idf/components/driver/analog_comparator/include -I/home/lord-daniel/esp/esp-idf/components/driver/dac/include -I/home/lord-daniel/esp/esp-idf/components/driver/gpio/include -I/home/lord-daniel/esp/esp-idf/components/driver/gptimer/include -I/home/lord-daniel/esp/esp-idf/components/driver/i2c/include -I/home/lord-daniel/esp/esp-idf/components/driver/i2s/include -I/home/lord-daniel/esp/esp-idf/components/driver/ledc/include -I/home/lord-daniel/esp/esp-idf/components/driver/mcpwm/include -I/home/lord-daniel/esp/esp-idf/components/driver/parlio/include -I/home/lord-daniel/esp/esp-idf/components/driver/pcnt/include -I/home/lord-daniel/esp/esp-idf/components/driver/rmt/include -I/home/lord-daniel/esp/esp-idf/components/driver/sdio_slave/include -I/home/lord-daniel/esp/esp-idf/components/driver/sdmmc/include -I/home/lord-daniel/esp/esp-idf/components/driver/sigma_delta/include -I/home/lord-daniel/esp/esp-idf/components/driver/spi/include -I/home/lord-daniel/esp/esp-idf/components/driver/temperature_sensor/include -I/home/lord-daniel/esp/esp-idf/components/driver/touch_sensor/include -I/home/lord-daniel/esp/esp-idf/components/driver/twai/include -I/home/lord-daniel/esp/esp-idf/components/driver/uart/include -I/home/lord-daniel/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/lord-daniel/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/lord-daniel/esp/esp-idf/components/esp_pm/include -I/home/lord-daniel/esp/esp-idf/components/esp_ringbuf/include -I/home/lord-daniel/esp/esp-idf/components/nvs_flash/include -I/home/lord-daniel/esp/esp-idf/components/esp_partition/include -I/home/lord-daniel/esp/esp-idf/components/spi_flash/include -I/home/lord-daniel/esp/esp-idf/components/esp_http_server/include -I/home/lord-daniel/esp/esp-idf/components/http_parser -I/home/lord-daniel/esp/esp-idf/components/esp_event/include -I/home/lord-daniel/Code/ESP_IDF/ashumitra_own/components/cJSON -I/home/lord-daniel/esp/esp-idf/components/esp_wifi/include -I/home/lord-daniel/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/lord-daniel/esp/esp-idf/components/esp_phy/include -I/home/lord-daniel/esp/esp-idf/components/esp_phy/esp32/include -I/home/lord-daniel/esp/esp-idf/components/esp_netif/include -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/lord-daniel/Code/ESP_IDF/ashumitra_own=. -fmacro-prefix-map=/home/lord-daniel/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/servo.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/servo.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/servo.c.obj -c /home/lord-daniel/Code/ESP_IDF/ashumitra_own/main/servo.c
/home/lord-daniel/Code/ESP_IDF/ashumitra_own/main/servo.c:13:6: error: conflicting types for 'servo_init'; have 'void(void)'
   13 | void servo_init(void)
      |      ^~~~~~~~~~
In file included from /home/lord-daniel/Code/ESP_IDF/ashumitra_own/main/servo.c:1:
/home/lord-daniel/Code/ESP_IDF/ashumitra_own/main/include/servo.h:22:11: note: previous declaration of 'servo_init' with type 'esp_err_t(void)' {aka 'int(void)'}
   22 | esp_err_t servo_init(void);
      |           ^~~~~~~~~~
[2/11] Performing build step for 'bootloader'
[1/1] cd /home/lord-daniel/Code/ESP_IDF/ashumitra_own/build/bootloader/esp-idf/esptool_py && /home/lord-daniel/.espressif/python_env/idf5.1_py3.10_env/bin/python /home/lord-daniel/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/lord-daniel/Code/ESP_IDF/ashumitra_own/build/bootloader/bootloader.bin
Bootloader binary size 0x68c0 bytes. 0x740 bytes (6%) free.
[3/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
/home/lord-daniel/Code/ESP_IDF/ashumitra_own/main/main.c:13:27: warning: 's_wifi_event_group' defined but not used [-Wunused-variable]
   13 | static EventGroupHandle_t s_wifi_event_group;
      |                           ^~~~~~~~~~~~~~~~~~
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/http_server.c.obj
ninja: build stopped: subcommand failed.
